# Firmware_IDNG64_V5

./: .gitignore
IDNG-64-v5-Application/: .mxproject  IDNG64v5.ioc
IDNG-64-v5-Application/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
IDNG-64-v5-Application/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
IDNG-64-v5-Application/MDK-ARM/: .clangd  Code_Porting.uvguix.DIEGOFH  Code_Porting.uvguix.javir  Code_Porting.uvoptx  IDNG64v5+IDNG64v5.cbuild.yml  IDNG64v5+IDNG64v5.cprj  IDNG64v5.cbuild-idx.yml  IDNG64v5.cbuild-pack.yml  IDNG64v5.cbuild-set.yml  IDNG64v5.cproject.yml  IDNG64v5.csolution.yml  IDNG64v5.uvguix.DIEGOFH  IDNG64v5.uvguix.d.rodriguez  IDNG64v5.uvguix.i.garcia  IDNG64v5.uvoptx  IDNG64v5.uvprojx  IDNG64v5_IDNG64v5.sct  board.c  board.h  startup_stm32g070xx.lst  startup_stm32g070xx.s  tasks.c  tasks.h  vcpkg-configuration.json
IDNG-64-v5-Application/MDK-ARM/Code_Porting/: Code_Porting.axf  Code_Porting.build_log.htm  Code_Porting.hex  Code_Porting.htm  Code_Porting.lnp  Code_Porting.map  Code_Porting.sct  Code_Porting_Code_Porting.dep  Code_Porting_sct.Bak  IDNG64v5_Code_Porting.dep  IDNG64v5_IDNG64v5.dep  actuallevel.crf  actuallevel.d  board.crf  board.d  botonera.crf  botonera.d  config.crf  config.d  dadsa.crf  dadsa.d  dali.crf  dali.d  daliaddressing.crf  daliaddressing.d  dalicommands.crf  dalicommands.d  daliloop.crf  daliloop.d  dalisensores.crf  dalisensores.d  dalitransceiver.crf  dalitransceiver.d  daliutils.crf  daliutils.d  dals.crf  dals.d  dani.crf  dani.d  dapsa.crf  (+168 more)
IDNG-64-v5-Application/MDK-ARM/RTE/_Code_Porting/: RTE_Components.h
IDNG-64-v5-Application/MDK-ARM/RTE/_IDNG64v5/: RTE_Components.h
IDNG-64-v5-Application/MDK-ARM/tmp/IDNG64v5/IDNG64v5/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
IDNG-64-v5-Application/app/: Nuevo documento de texto.txt  actualLevel.c  actualLevel.h  board.c  board.h  botonera.c  config.c  config.h  dADSA.c  dALS.c  dANI.c  dAPSA.c  dAQCGL.c  dAQDTL.c  dASE.c  dASRA.c  dali.c  dali.h  daliAddressing.c  daliLoop.c  daliLoop.h  daliSensores.c  daliSensores.h  daliTransceiver.c  daliUtils.c  debug.h  embeddedBootloader.c  embeddedBootloader.h  ethFramming.c  ethFramming.h  ethPing.c  ethTransceiver.c  fallos.c  historico.c  historico.h  historicoTest.c  historicoTest.h  iED.c  interfaces.c  interfaces.h  (+37 more)
IDNG-64-v5-Application/app/sensoresGrupos/: sensoresGrupos.c  sensoresGrupos.h  sensoresGruposDetectoresPresencia.c  sensoresGruposPulsadoresAccionBasculante.c  sensoresGruposPulsadoresAccionFija.c  sensoresGruposPulsadoresAccionRegulacion.c  sensoresGruposPulsadoresAccionTemporizada.c  sensoresGruposPulsadoresTW.c  sensoresGruposPulsadoresTW.h  sensoresGruposReguladoresLuz.c
IDNG-64-v5-Application/app/w5100/: spi.h  w5100.c
